--- a/Digital.Diary/Digital.Diary.AppServer/MainPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/MainPage.xaml
@@ -1,41 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.MainPage">
+             xmlns:vm="clr-namespace:Digital.Diary.AppServer.ViewModels"
+             xmlns:m="clr-namespace:Digital.Diary.AppServer.Models.Academic"
+             x:Class="Digital.Diary.AppServer.MainPage"
+             x:DataType="vm:MainVm">
+    <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshingCommand}">
+        <CollectionView ItemsSource="{Binding Faculties}" RemainingItemsThreshold="10">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="m:FacultyAppModel">
+                    <SwipeView>
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="BSMRSTU Digital Diary"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="One step ahead to digitalize  your university"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-            <Label
-                x:Name="weatherResult"
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-            <Button
-                x:Name="CounterButton"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                        <!-- Define the item template for each item in the collection -->
+                        <StackLayout>
+                            <Frame Padding="10" Margin="3" BackgroundColor="#EEEEEE">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Frame HeightRequest="100" WidthRequest="100" CornerRadius="100" HasShadow="False">
+                                        <Image Source="{Binding ImageUrl}"
+                                    Aspect="AspectFill"
+                                    HorizontalOptions="Fill"
+                                    VerticalOptions="Fill" />
+                                    </Frame>
+                                    <StackLayout Grid.Column="1" Margin="10,25,10,10">
+                                        <Label Text="{Binding FacultyName}" FontSize="18"
+                                               TextColor="Black"
+                                               FontAttributes="Bold" />
+                                    </StackLayout>
+                                </Grid>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainVm}}, Path=GoToDetailCommand}" CommandParameter="{Binding .}" />
+                                </Frame.GestureRecognizers>
+                            </Frame>
+                        </StackLayout>
+                    </SwipeView>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </RefreshView>
 </ContentPage>
