--- a/Digital.Diary/Digital.Diary.AppServer/src/Host/HomePage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/src/Host/HomePage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
@@ -16,15 +15,13 @@
                 <!-- First Row - First Column -->
                 <Frame CornerRadius="20"
               Margin="10"
-              BackgroundColor="#2B0B98"
+              BackgroundColor="SkyBlue"
               FlexLayout.Grow="1"
                   HeightRequest="150"
                   WidthRequest="160"
                   HorizontalOptions="Start"
                   VerticalOptions="Start"
-                       BorderColor="Orange"
-                       
-                       >
+                       BorderColor="Orange">
 
                     <StackLayout>
                         <Label Text="এটি অনুষদ ট্যাব"
@@ -43,7 +40,7 @@
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -63,7 +60,7 @@
 WidthRequest="160"
 HorizontalOptions="Start"
 VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -84,7 +81,7 @@ VerticalOptions="Start"
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -105,9 +102,8 @@ VerticalOptions="Start"
                   WidthRequest="160"
                   HorizontalOptions="Start"
                   VerticalOptions="Start"
-                       
-                       BorderColor="Orange">
 
+                       BorderColor="Orange">
 
                     <StackLayout>
                         <Label Text="এটি অনুষদ ট্যাব"
@@ -126,7 +122,7 @@ VerticalOptions="Start"
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -146,7 +142,7 @@ VerticalOptions="Start"
 WidthRequest="160"
 HorizontalOptions="Start"
 VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -167,7 +163,7 @@ VerticalOptions="Start"
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -187,7 +183,7 @@ VerticalOptions="Start"
                   WidthRequest="160"
                   HorizontalOptions="Start"
                   VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -207,7 +203,7 @@ VerticalOptions="Start"
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -227,7 +223,7 @@ VerticalOptions="Start"
 WidthRequest="160"
 HorizontalOptions="Start"
 VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -248,7 +244,7 @@ VerticalOptions="Start"
                     WidthRequest="160"
                     HorizontalOptions="Start"
                     VerticalOptions="Start"
-                       
+
                        BorderColor="Orange">
 
                     <StackLayout>
@@ -264,7 +260,6 @@ VerticalOptions="Start"
     </ContentPage>
 
     <ContentPage Title="প্রশাসনিক" IconImageSource="administration">
-
         <Border StrokeThickness="4"
           WidthRequest="180"
           HeightRequest="150"
@@ -273,9 +268,7 @@ VerticalOptions="Start"
           Padding="1,8"
           Margin="18,30"
           HorizontalOptions="Start"
-          VerticalOptions="Start"
-                
-                      >
+          VerticalOptions="Start">
 
             <Border.Stroke>
                 <LinearGradientBrush EndPoint="0,1">
