--- a/Digital.Diary/Digital.Diary.AppServer/src/Host/HomePage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/src/Host/HomePage.xaml
@@ -1,7 +1,10 @@
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:Digital.Diary.AppServer.ViewModels"
+             xmlns:m="clr-namespace:Digital.Diary.AppServer.Models.Academic"
             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
             android:TabbedPage.ToolbarPlacement="Bottom"
+
             x:Class="Digital.Diary.src.Host.HomePage"
             Title="HomePage"
             BarBackgroundColor="Green"
@@ -9,285 +12,74 @@
             SelectedTabColor="Red"
             UnselectedTabColor="Bisque">
 
-    <ContentPage Title="অনুষদ" IconImageSource="faculty">
-        <ScrollView>
-            <FlexLayout Direction="Row" Wrap="Wrap" AlignContent="Start">
-                <!-- First Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="SkyBlue"
-              FlexLayout.Grow="1"
-                  HeightRequest="150"
-                  WidthRequest="160"
-                  HorizontalOptions="Start"
-                  VerticalOptions="Start"
-                       BorderColor="Orange">
+    <!--<ContentPage Title="অনুষদ" IconImageSource="faculty">
+        <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshingCommand}">
+            <CollectionView ItemsSource="{Binding Faculties}" RemainingItemsThreshold="10">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="m:Faculty">
+                        <SwipeView>
 
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                      FontAttributes="Bold"
-                      FontSize="18"
-                      HorizontalOptions="Center"
-                      VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- First Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- Second Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-WidthRequest="160"
-HorizontalOptions="Start"
-VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-
-                <!-- Second Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-
-                <!-- First Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                  HeightRequest="150"
-                  WidthRequest="160"
-                  HorizontalOptions="Start"
-                  VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                      FontAttributes="Bold"
-                      FontSize="18"
-                      HorizontalOptions="Center"
-                      VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- First Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- Second Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-WidthRequest="160"
-HorizontalOptions="Start"
-VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-
-                <!-- Second Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- First Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                  HeightRequest="150"
-                  WidthRequest="160"
-                  HorizontalOptions="Start"
-                  VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                      FontAttributes="Bold"
-                      FontSize="18"
-                      HorizontalOptions="Center"
-                      VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- First Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-                <!-- Second Row - First Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-WidthRequest="160"
-HorizontalOptions="Start"
-VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-
-                <!-- Second Row - Second Column -->
-                <Frame CornerRadius="20"
-              Margin="10"
-              BackgroundColor="#2B0B98"
-              FlexLayout.Grow="1"
-                   HeightRequest="150"
-                    WidthRequest="160"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Start"
-
-                       BorderColor="Orange">
-
-                    <StackLayout>
-                        <Label Text="এটি অনুষদ ট্যাব"
-                          FontAttributes="Bold"
-                          FontSize="18"
-                          HorizontalOptions="Center"
-                          VerticalOptions="EndAndExpand" />
-                    </StackLayout>
-                </Frame>
-            </FlexLayout>
-        </ScrollView>
+                            -->
+    <!-- Define the item template for each item in the collection -->
+    <!--
+                            <StackLayout>
+                                <Frame Padding="10" Margin="3" BackgroundColor="#EEEEEE">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Frame HeightRequest="100" WidthRequest="100" CornerRadius="100" HasShadow="False">
+                                            <Image Source="{Binding ImageUrl}"
+                                 Aspect="AspectFill"
+                                 HorizontalOptions="Fill"
+                                 VerticalOptions="Fill" />
+                                        </Frame>
+                                        <StackLayout Grid.Column="1" Margin="10,25,10,10">
+                                            <Label Text="{Binding FacultyName}" FontSize="18"
+                                            TextColor="Black"
+                                            FontAttributes="Bold" />
+                                        </StackLayout>
+                                    </Grid>
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainVm}}, Path=GoToDetailCommand}" CommandParameter="{Binding .}" />
+                                    </Frame.GestureRecognizers>
+                                </Frame>
+                            </StackLayout>
+                        </SwipeView>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
     </ContentPage>
-
     <ContentPage Title="প্রশাসনিক" IconImageSource="administration">
         <Border StrokeThickness="4"
-          WidthRequest="180"
-          HeightRequest="150"
-          StrokeShape="RoundRectangle 40"
-          Background="#2B0B98"
-          Padding="1,8"
-          Margin="18,30"
-          HorizontalOptions="Start"
-          VerticalOptions="Start">
+        WidthRequest="180"
+        HeightRequest="150"
+        StrokeShape="RoundRectangle 40"
+        Background="#2B0B98"
+        Padding="1,8"
+        Margin="18,30"
+        HorizontalOptions="Start"
+        VerticalOptions="Start">
 
             <Border.Stroke>
                 <LinearGradientBrush EndPoint="0,1">
                     <GradientStop Color="Orange"
-                    Offset="0.1" />
+                  Offset="0.1" />
                     <GradientStop Color="Brown"
-                    Offset="1.0" />
+                  Offset="1.0" />
                 </LinearGradientBrush>
             </Border.Stroke>
 
             <Label Text="এটি প্রশাসনিক ট্যাব"
-         Margin="20"
-         FontAttributes="Bold"
-         FontSize="18"
-         HorizontalOptions="Center"
-         VerticalOptions="Center" />
+       Margin="20"
+       FontAttributes="Bold"
+       FontSize="18"
+       HorizontalOptions="Center"
+       VerticalOptions="Center" />
         </Border>
     </ContentPage>
-
     <ContentPage Title="সেবাসমূহ" IconImageSource="services">
 
         <Border StrokeThickness="4"
@@ -317,7 +109,6 @@ VerticalOptions="Start"
          VerticalOptions="Center" />
         </Border>
     </ContentPage>
-
     <ContentPage Title="অন্যান্য" IconImageSource="others">
 
         <Border StrokeThickness="4"
@@ -346,5 +137,5 @@ VerticalOptions="Start"
                HorizontalOptions="Center"
                VerticalOptions="Center" />
         </Border>
-    </ContentPage>
+    </ContentPage>-->
 </TabbedPage>
