--- a/Digital.Diary/Digital.Diary.AppServer/MainPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/MainPage.xaml
@@ -1,44 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:Digital.Diary.AppServer.ViewModels"
-             xmlns:m="clr-namespace:Digital.Diary.AppServer.Models.Academic"
-             x:Class="Digital.Diary.AppServer.MainPage"
-             x:DataType="vm:MainVm">
-    <RefreshView IsRefreshing="{Binding IsRefreshing}" Command="{Binding RefreshingCommand}">
-        <CollectionView ItemsSource="{Binding Faculties}" RemainingItemsThreshold="10">
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="m:FacultyAppModel">
-                    <SwipeView>
-
-                        <!-- Define the item template for each item in the collection -->
-                        <StackLayout>
-                            <Frame Padding="10" Margin="3" BackgroundColor="#EEEEEE">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Frame HeightRequest="100" WidthRequest="100" CornerRadius="100" HasShadow="False">
-                                        <Image Source="{Binding ImageUrl}"
-                                    Aspect="AspectFill"
-                                    HorizontalOptions="Fill"
-                                    VerticalOptions="Fill" />
-                                    </Frame>
-                                    <StackLayout Grid.Column="1" Margin="10,25,10,10">
-                                        <Label Text="{Binding FacultyName}" FontSize="18"
-                                               TextColor="Black"
-                                               FontAttributes="Bold" />
-                                    </StackLayout>
-                                </Grid>
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainVm}}, Path=GoToDetailCommand}" CommandParameter="{Binding .}" />
-                                </Frame.GestureRecognizers>
-                            </Frame>
-                        </StackLayout>
-                    </SwipeView>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </RefreshView>
+            x:Class="Digital.Diary.AppServer.MainPage"
+            Title="MainPage">
 </ContentPage>
