Administratrix Offices Added

--- a/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/AboutPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/AboutPage.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.Pages.ServicesPage"
-             Title="সেবা সমূহ">
+             x:Class="Digital.Diary.AppServer.Pages.HomePages.AboutPage"
+             Title="আমাদের সম্পর্কে">
     <Shell.TitleView>
         <Grid>
-            <Label Text="সেবা সমূহ" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
+            <Label Text="আমাদের সম্পর্কে" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
         </Grid>
     </Shell.TitleView>
     <VerticalStackLayout>
