--- a/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/Help.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/Help.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.Pages.AdministratrixPage"
-             Title="প্রশাসনিক সমূহ">
+             x:Class="Digital.Diary.AppServer.Pages.HomePages.Help"
+             Title="যেকোনো প্রয়োজনে">
     <Shell.TitleView>
         <Grid>
-            <Label Text="প্রশাসনিক সমূহ" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
+            <Label Text="যেকোনো প্রয়োজনে" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
         </Grid>
     </Shell.TitleView>
     <VerticalStackLayout>
