--- a/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/ServicesPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/ServicesPage.xaml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.Pages.OthersPage"
-             Title="অন্যান্য">
-    
+             x:Class="Digital.Diary.AppServer.Pages.HomePages.ServicesPage"
+             Title="সেবা সমূহ">
     <Shell.TitleView>
         <Grid>
-            <Label Text="অন্যান্য" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
+            <Label Text="সেবা সমূহ" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
         </Grid>
     </Shell.TitleView>
     <VerticalStackLayout>
