--- a/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/FacultiesPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/FacultiesPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.Pages.FacultiesPage"
-             xmlns:vm="clr-namespace:Digital.Diary.AppServer.ViewModels"
+             x:Class="Digital.Diary.AppServer.Pages.HomePages.FacultiesPage"
+             xmlns:vm="clr-namespace:Digital.Diary.AppServer.ViewModels.Academic"
              xmlns:m="clr-namespace:Digital.Diary.AppServer.Models.Academic"
              x:DataType="vm:FacultyVm">
     <Shell.TitleView>
