--- a/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/OthersPage.xaml
+++ b/Digital.Diary/Digital.Diary.AppServer/Pages/HomePages/OthersPage.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Digital.Diary.AppServer.Pages.Help"
-             Title="যেকোনো প্রয়োজনে">
+             x:Class="Digital.Diary.AppServer.Pages.HomePages.OthersPage"
+             Title="অন্যান্য">
+
     <Shell.TitleView>
         <Grid>
-            <Label Text="যেকোনো প্রয়োজনে" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
+            <Label Text="অন্যান্য" TextColor="White" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" />
         </Grid>
     </Shell.TitleView>
     <VerticalStackLayout>
